# mirsud

./: README.md  main.py  parser.py  pyproject.toml  results.csv  settings.py  transformer.py
tests/: input.html  test_transformer.py
