[tool.poetry]
name = "mirsud"
version = "0.1.0"
description = ""
authors = ["lixich <lixich@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
mypy = "^1.10.1"
pandas = "^2.2.2"
pytest = "^8.2.2"
bs4 = "^0.0.2"
lxml = "^5.2.2"
types-setuptools = "^70.3.0.20240710"
requests = "^2.32.3"
tenacity = "^8.5.0"
html5lib = "^1.1"
ruff = "^0.5.2"
pydantic-settings = "^2.3.4"
types-pyyaml = "^6.0.12.20240311"
types-requests = "^2.32.0.20240712"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.11
install_types = true
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = [".git", ".venv", "venv", "__pycache__", "__init__.py", ".mypy_cache", ".pytest_cache"]

[tool.ruff]
line-length = 99
indent-width = 4
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []